# 2DGraphics1_cmake

./: .gitignore  CMakeLists.txt
@lib/lib/: Framework_d.idb
NimotsuKunBox/: CMakeLists.txt  main.cpp
drawPixels/: CMakeLists.txt  main.cpp
